<resources>
    <string name="app_name">HEBF Optimizer</string>
    <string name="build_date" translatable="false">Codename: Mate\n2019/12/31</string>
    <string name="build_version" translatable="false">v2.2.0 b4 (93)</string>
    <string name="build_changelog" translatable="false">\n
        ▪ HEBF Account and its features; login using it or your Google Account\n
        ▪ AppOps (if supported)\n
        ▪ Auto start Manager\n
        ▪ Create, save, restore and share backups using the Google Cloud\n
        ▪ Rate public configurations\n
        ▪ Quickly disable data, WiFi, location, bluetooth and sync to save battery\n
        ▪ CPU Manager improved - still a bit buggy\n
        ▪ CPU Tunables edit mode now adapts for numerical input\n
        ▪ Doze idling mode selection\n
        ▪ Whitelist / blacklist apps for Doze\n
        ▪ Unforce idle button\n
        ▪ Cleaner improved\n
        ▪ Cloudflare DNS\n
        ▪ Updated ART Compiler filters for Android 8.0+\n
        ▪ Adaptive icon for Android 8.0+\n
        ▪ Build.prop Editor improved (search props, better non-prop detection, fixed permission denied issues)\n
        ▪ You can now create a script from scratch in the Scripts Runner\n
        ▪ Scripts Runner will warn about scripts containing \"sleep\" and \"exit\" commands\n
        ▪ Sysctl\'s navigation improved\n
        ▪ You can now schedule mediaserver kill\n
        ▪ You can now open .hebf files to restore a backup\n
        ▪ Layouts for landscape mode and tablets\n
        ▪ Boost widget\n
        ▪ New white theme\n
        ▪ HEBF Emulated Command Line\n
        ▪ Root processes will be opened less often\n
        ▪ Initial support for non-rooted devices\n
        ▪ Themes improved\n
        ▪ Fixed some problems with the settings screen\n
        ▪ Other bug fixes\n
    </string>
    <string name="accessibility_alert">We need your permission to perform battery-saving actions and close inactive applications. Click on continue and the settings screen will open, look for something similar to what the tutorial below shows:</string>
    <string name="accessibility_service">Accessibility Service</string>
    <string name="accessibility_service_description">This service will automatically force stop an application at its details screen once you invoke it (through HEBF only).</string>
    <string name="accessibility_service_label">HEBF Optimizer - Battery Saver</string>
    <string name="account_created">Account created</string>
    <string name="account_options">Account options</string>
    <string name="achievement_advanced_sum">Find the hidden section using the hidden way</string>
    <string name="achievement_backup">Better safe than sorry</string>
    <string name="achievement_backup_sum">Make a local backup</string>
    <string name="achievement_command_line" translatable="false">Superuser</string>
    <string name="achievement_command_line_sum">Use the command line</string>
    <string name="achievement_help">What does this thing do?</string>
    <string name="achievement_help_sum">Ask for help</string>
    <string name="achievement_prop">Property</string>
    <string name="achievement_prop_sum">Add a prop using the Build.prop Editor</string>
    <string name="achievement_rootless">Rootless</string>
    <string name="achievement_rootless_sum">Open the rootless options screen</string>
    <string name="achievement_sharing">Sharing</string>
    <string name="achievement_sharing_sum">Share a configuration file online</string>
    <string name="achievement_tunable">Fine tuning</string>
    <string name="achievement_tunable_sum">Change a CPU governor parameter</string>
    <string name="achievement_unlocked">Achievement unlocked: %s</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_format">%1$d/%2$d achievements unlocked</string>
    <string name="action">Action</string>
    <string name="adaway_1">Dominik Schürmann, 0-kaladin and Dāvis Mošenkovs for the:</string>
    <string name="adaway_2"><a href="http://free-software-for-android.github.io/AdAway/">AdAway open source</a> app, where we took adblocker hosts.\n– AdAway is currently maintained by 0-kaladin and Dāvis Mošenkovs. The original author is Dominik Schürmann.</string>
    <string name="add">Add</string>
    <string name="add_from_presets">Add from presets</string>
    <string name="advanced_fail">Sorry, try again</string>
    <string name="advanced_options">Advanced options</string>
    <string name="advanced_toast">You have unlocked the advanced options!</string>
    <string name="advanced_toast_cont">You\'re %1$s steps away from unlocking advanced options</string>
    <string name="aggressive">Aggressive</string>
    <string name="aggressive_doze">Aggressive doze</string>
    <string name="aggressive_doze_off">Aggressive doze disabled</string>
    <string name="aggressive_doze_on">Aggressive doze enabled</string>
    <string name="aggressive_doze_sum">Forces the Doze Mode activation moments after the screen turns off, putting the device in deep sleep regardless of other previous state.</string>
    <string name="android_version">Android version</string>
    <string name="anonymous">Anonymous</string>
    <string name="apagar">Delete</string>
    <string name="app_caches_android_data">App caches (Android/data)</string>
    <string name="app_caches_data">App caches (/data/data)</string>
    <string name="app_ops_sum">Manage application operations and permissions</string>
    <string name="app_ver">Application version</string>
    <string name="appbar_scrolling_view_behavior_local" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_preferences">Application preferences</string>
    <string name="application_settings">Application settings</string>
    <string name="application_settings_sub">Open the Android settings screen for this application.</string>
    <string name="apply">Apply</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apps_manager">Apps Manager</string>
    <string name="apps_manager_3rd_party">Third-party apps</string>
    <string name="apps_manager_all_apps">All apps</string>
    <string name="apps_manager_disabled_apps">Disabled apps</string>
    <string name="apps_manager_system_apps">System apps</string>
    <string name="arquivos_fail">Could not find one or more files required for application operation. The most common cause is that the application was closed during the first opening or your system uses a different path to \"/data\".\nYou can clear the application\'s data to force the copy again.</string>
    <string name="art_cache_warning">For this function to work smoothly, you need to clear the cache and reboot.\nWhen you press OK the device will reboot.</string>
    <string name="art_sum">The Android Runtime (ART) uses ahead-of-time compilation to compile the dex code into native code at the time of installation, pre-optimizing it using the dex2oat tool so your processor can interpret the code easier.\nThis option allows you to change the dex2oat compiler filter to control how it compiles.</string>
    <string name="art_warning_not_found">The ART compiler filter options were not found on your system, you can close this window or enable them at your own risk.</string>
    <string name="atraso">Reapply interval</string>
    <string name="atraso_sub">The delay in seconds for the application to reapply changes.</string>
    <string name="auth_failure">Authentication failure</string>
    <string name="auto_optimize_performance">Auto optimize your device every 15 minutes, this option will give you a new experience in the performance of your device</string>
    <string name="auto_optimize_sub">Auto optimize your game after 15 minutes, very useful in heavy or open world games (this may produce negative effects, activate it only if you are sure)</string>
    <string name="auto_optimizer">Auto optimizer</string>
    <string name="auto_start_disabler">Auto start disabler</string>
    <string name="bateria">Battery</string>
    <string name="battery">Battery</string>
    <string name="bug_report">Bug report</string>
    <string name="cleaner">Cleaner</string>
    <string name="cpu_manager">CPU Manager</string>
    <string name="dashboard">Dashboard</string>
    <string name="device_info">Device info</string>
    <string name="ferramentas">Tools</string>
    <string name="force_stop">Force stop</string>
    <string name="forcar_parada_sub">Kill the application</string>
    <string name="force_english_language">Force English language</string>
    <string name="force_english_language_sub">Force the use of English language in application</string>
    <string name="fps_unlocker_sum">Adjusts the minimum number of video frame periods per buffer swap to prevent the \"frame tearing\" (when you see half of one frame and half of another)</string>
    <string name="fstrim">Fstrim</string>
    <string name="game_booster">Game Booster</string>
    <string name="gpu">Use GPU Acceleration</string>
    <string name="gpu_sub">Enables the hardware accelerated UI, forces GPU screen composing and disables the vsync for a much better performance at the cost of battery.</string>
    <string name="internet_tweaks">Internet Tweaks</string>
    <string name="kernel">Kernel Options</string>
    <string name="liquid">Liquid smooth UI</string>
    <string name="liquid_sub">Optimizes the touch pressure scale and animations duration for improved user interface elements.</string>
    <string name="misc">Miscellaneous</string>
    <string name="multitasking">Best multitasking</string>
    <string name="multitasking_sub">Tunes the Low memory killer parameters for a better multitasking profile, based on the amount of RAM available.</string>
    <string name="my_account">My account</string>
    <string name="outro">Others</string>
    <string name="performance">Performance</string>
    <string name="performance_sub">Enables the performance tuning mode, decreases the colors number to 16bpp (16 bits per pixel) and optimizes the \"fling\" velocity (smooth scroll) for a general improvement with minimal impact on battery.</string>
    <string name="performance_tweak">Performance tweak</string>
    <string name="ram_manager">RAM Manager</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_sub">Leave your review on the Google Play Store</string>
    <string name="rendering">Improve rendering quality</string>
    <string name="rendering_sub">Optimizes the screen composition properties and enables overlay UI mode for a better graphics quality.</string>
    <string name="rendering_tweaks">Rendering tweaks</string>
    <string name="ring">Reduce in-call delay</string>
    <string name="ring_sub">Reduces the delay to receive or end a call.</string>
    <string name="scroll">Better scrolling</string>
    <string name="scroll_sub">Improves the scrolling responsiveness and speed.</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="sobre">About</string>
    <string name="tipo_usuario">What type of user are you?</string>
    <string name="tools">Tools</string>
    <string name="tweaks">Tweaks</string>
    <string name="ui_tweaks">UI Tweaks</string>
    <string name="user">Change the user type</string>
    <string name="user_sub">Change the user type to show / hide risky options</string>
    <string name="view_log">View the logs</string>
    <string name="vip_battery_saver">VIP Battery Saver</string>
    <string name="wifi_tweaks">Wi-Fi settings</string>
    <string name="purchase_premium">Purchase premium upgrade</string>
</resources>