<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Info">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_dashboard" android:icon="@drawable/ic_dashboard"
                    android:title="@string/dashboard" />
                <item android:id="@+id/nav_info" android:icon="@drawable/ic_phone_android"
                    android:title="@string/device_info" />
            </group>
        </menu>
    </item>

    <item android:title="@string/toolbox">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_vip" android:icon="@drawable/ic_vip_battery_saver"
                    android:title="@string/vip_battery_saver" />
                <item android:id="@+id/nav_game" android:icon="@drawable/ic_game_booster"
                    android:title="Game Booster" />
                <item android:id="@+id/nav_tools" android:icon="@drawable/ic_build_outline"
                    android:title="@string/ferramentas" />
                <item android:id="@+id/nav_ram_manager" android:icon="@drawable/ic_memoria"
                    android:title="@string/ram_manager" />
                <item android:id="@+id/nav_cpu" android:icon="@drawable/ic_cpu"
                    android:title="@string/cpu_manager" />
            </group>
        </menu>
    </item>

    <item android:title="@string/tweaks">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_bateria" android:icon="@drawable/ic_battery"
                    android:title="@string/bateria" />
                <item android:id="@+id/nav_performance" android:icon="@drawable/ic_performance"
                    android:title="@string/performance" />
                <item android:id="@+id/nav_net" android:icon="@drawable/ic_net_outilne"
                    android:title="@string/internet_tweaks" />
            </group>
        </menu>
    </item>

    <item android:title="@string/misc">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_fstrim" android:icon="@drawable/ic_fstrim_menu"
                    android:title="@string/fstrim" />
                <item android:id="@+id/nav_kernel" android:icon="@drawable/ic_tune"
                    android:title="@string/kernel" />
                <item android:id="@+id/nav_cleaner" android:icon="@drawable/ic_delete"
                    android:title="@string/cleaner" />
                <item android:id="@+id/nav_advanced" android:icon="@drawable/ic_advanced"
                    android:title="@string/advanced_options" />
            </group>
        </menu>
    </item>

    <item android:title="@string/outro">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_my_account" android:icon="@drawable/ic_user"
                    android:title="@string/my_account" />
                <item android:id="@+id/nav_public" android:icon="@drawable/ic_public"
                    android:title="Network" />
                <item android:id="@+id/nav_settings" android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />
                <item android:id="@+id/nav_purchase_premium" android:icon="@drawable/ic_pro"
                    android:title="@string/purchase_premium" />
                <item android:id="@+id/nav_bug" android:icon="@drawable/ic_bug_report"
                    android:title="@string/bug_report" />
                <item android:id="@+id/nav_about_less" android:icon="@drawable/ic_info_outline"
                    android:title="@string/sobre" />
            </group>
        </menu>
    </item>

</menu>