<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_margin_alt"
        android:paddingRight="@dimen/default_margin_alt">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/general_performance"
            android:textAppearance="@style/TextAppearance.HEBF.Headline4"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/performance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/performance_sub"
                    app:title="@string/performance_tweak" />

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/multitasking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/multitasking_sub"
                    app:title="@string/multitasking" />

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/ring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/ring_sub"
                    app:title="@string/ring" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/rendering_tweaks"
            android:textAppearance="@style/TextAppearance.HEBF.Headline4"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/render"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/rendering_sub"
                    app:title="@string/rendering" />

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/gpu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/gpu_sub"
                    app:title="@string/gpu" />

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/fps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/fps_unlocker_sum"
                    app:title="FPS Unlocker" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/ui_tweaks"
            android:textAppearance="@style/TextAppearance.HEBF.Headline4"
            android:textColor="?attr/colorPrimary" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/liquid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/liquid_sub"
                    app:title="@string/liquid" />

                <com.androidvip.hebf.views.ControlSwitch
                    android:id="@+id/scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:description="@string/scroll_sub"
                    app:title="@string/scroll" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</ScrollView>

