<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationDashboard">

    <fragment
        android:id="@+id/navigationDashboard"
        android:name="com.androidvip.hebf.ui.main.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigationBattery"
        android:name="com.androidvip.hebf.ui.main.battery.BatteryFragment"
        android:label="@string/battery"
        tools:layout="@layout/fragment_battery" />

    <fragment
        android:id="@+id/navigationPerformance"
        android:name="com.androidvip.hebf.ui.main.performance.PerformanceFragment"
        android:label="@string/performance"
        tools:layout="@layout/fragment_performance2" />

    <fragment
        android:id="@+id/navigationTools"
        android:name="com.androidvip.hebf.ui.main.tools.ToolsFragment2"
        android:label="@string/tools"
        tools:layout="@layout/fragment_tools2">
        <action
            android:id="@+id/startWiFiTweaksFragment"
            app:destination="@id/wiFiTweaksFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/startFstrimFragment"
            app:destination="@id/fstrimFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
        <action
            android:id="@+id/startKernelOptionsFragment"
            app:destination="@id/kernelOptionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fragment_close_exit"
            app:popEnterAnim="@anim/fragment_open_enter"
            app:popExitAnim="@anim/fragment_close_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigationTune"
        android:name="com.androidvip.hebf.ui.main.tune.TuneFragment"
        android:label="@string/tune"
        tools:layout="@layout/fragment_tune">
        <action
            android:id="@+id/startRamManagerFragment"
            app:destination="@id/ramManagerFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigationNotifications"
        android:name="com.androidvip.hebf.ui.main.notif.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigationPrefs"
        android:name="com.androidvip.hebf.ui.prefs.PreferencesFragment"
        android:label="@string/settings" >
        <action
            android:id="@+id/startNavigationBugReport"
            app:destination="@id/navigationBugReport"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/wiFiTweaksFragment"
        android:name="com.androidvip.hebf.ui.main.tools.WiFiTweaksFragment"
        android:label="@string/wifi_tweaks"
        tools:layout="@layout/fragment_wifi_tweaks" />

    <fragment
        android:id="@+id/fstrimFragment"
        android:name="com.androidvip.hebf.ui.main.tools.FstrimFragment"
        android:label="@string/fstrim"
        tools:layout="@layout/fragment_fstrim" />

    <fragment
        android:id="@+id/ramManagerFragment"
        android:name="com.androidvip.hebf.ui.main.tune.RamManagerFragment"
        android:label="@string/ram_manager"
        tools:layout="@layout/fragment_ram_manager2" />

    <fragment
        android:id="@+id/kernelOptionsFragment"
        android:name="com.androidvip.hebf.ui.main.tune.KernelOptionsFragment"
        android:label="@string/kernel"
        tools:layout="@layout/fragment_kernel_options" />

    <fragment
        android:id="@+id/navigationDeviceInfo"
        android:name="com.androidvip.hebf.ui.info.DeviceInfoFragment"
        android:label="@string/device_info"
        tools:layout="@layout/fragment_device_info2" />

    <fragment
        android:id="@+id/navigationMyAccount"
        android:name="com.androidvip.hebf.ui.account.AccountFragment"
        android:label="@string/my_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigationBugReport"
        android:name="com.androidvip.hebf.ui.prefs.BugReportFragment"
        android:label="@string/bug_report"
        tools:layout="@layout/fragment_bug_report2" />

</navigation>